--- a/src/main/resources/static/css/scss/pages/board/_review.scss
+++ b/src/main/resources/static/css/scss/pages/board/_review.scss
@@ -1,5 +1,5 @@
-/* reviews page start */
-.reviews_body {
+/* review start */
+.review_body {
     width: 90%;
     margin: 0 auto;
 
@@ -8,41 +8,9 @@
         overflow-x: auto;
 
         table {
-            width: 100%;
-            min-width: 768px;
-            table-layout: fixed;
-            border-spacing: 0;
-            border-collapse: collapse;
-            position: relative;
-            margin: 10px auto 0;
-            border: 1px solid #e5e5e5;
-            border-top: 1px solid #e5e5e5;
-            border-right: none;
-            border-left: none;
-            line-height: 1.7;
-            font-size: 12px;
-            letter-spacing: 0.0em !important;
-            color: #353535;
-
-            thead {
-                tr {
-                    th {
-                        text-align: center;
-                        padding: 15px 0 14px;
-                        vertical-align: middle;
-                        background-color: #fff;
-                    }
-                }
-            }
-
             tbody {
                 tr {
                     td {
-                        border-top: 1px solid #e5e5e5;
-                        text-align: center;
-                        vertical-align: middle;
-                        padding: 15px 0;
-
                         &.thumb {
                             img {
                                 width: 60px;
@@ -50,17 +18,12 @@
                             }
                         }
 
-                        &.left_top {
-                            text-align: left;
-                            vertical-align: top;
-                        }
-
                         &.left {
                             text-align: left;
-                        }
 
-                        &.title {
-                            padding-left: 20px;
+                            a {
+                                color: #111111;
+                            }
                         }
 
                         &.itemNm {
@@ -73,6 +36,10 @@
                                     color: #555555;
                                 }
                             }
+                        }
+
+                        &.title {
+                            padding-left: 20px;
                         }
 
                         &.createdBy {
@@ -115,10 +82,6 @@
                             }
                         }
                     }
-
-                    &.center {
-                        text-align: center;
-                    }
                 }
             }
         }
@@ -148,55 +111,68 @@
     }
 
     .search_box {
-        width: 100%;
-        margin: 40px auto 0;
-        display: flex;
-        justify-content: end;
-        align-items: center;
+        padding: 20px 0 20px 10px;
+        color: #2e2e2e;
+        font-size: 12px;
 
-        select {
-            border: 1px solid #d3d3d3;
-            font-size: 12px;
-            margin-right: 2px;
-            height: 40px;
-        }
-
-        input {
-            width: 240px;
+        .board_search {
+            display: block;
             border: none;
-            height: 40px;
-            border: 1px solid #d3d3d3;
-            padding-left: 10px;
-            font-size: 12px;
-            margin-right: 2px;
-        }
 
-        input:focus {
-            outline: none;
-        }
+            legend {
+                visibility: hidden;
+                position: absolute;
+                left: -9999px;
+                top: -9999px;
+                width: 0;
+                height: 0;
+                line-height: 0;
+            }
 
-        input:focus::placeholder {
-            opacity: 0;
-        }
-    }
-}
+            p {
+                margin: 0 0 10px;
+                padding: 0 0 0 7px;
+                background: url(//img.echosting.cafe24.com/skin/base/common/ico_triangle3.gif) no-repeat 0 45%;
 
-@media (max-width: 1000px) {
-    .reviews_body {
-        table {
-            thead {
-                tr {
-                    th:nth-child(1) {
-                        width: 20px !important;
-                    }
+                &::before {
+                    content: "검색어";
+                }
 
-                    th:nth-child(2),
-                    th:nth-child(3),
-                    th:nth-child(4),
-                    th:nth-child(5),
-                    th:nth-child(6) {
-                        width: 50px !important;
-                    }
+                select.search_date_type {
+                    margin: 0 2px 0 22px;
+                    width: 80px;
+                    height: 30px;
+                    line-height: 29px;
+                    min-height: 30px;
+                    border: 1px solid #ddd;
+                    padding: 0 5px 0 10px;
+                    color: #353535;
+                }
+
+                input {
+                    width: 240px;
+                    border: none;
+                    height: 30px;
+                    border: 1px solid #d3d3d3;
+                    padding-left: 10px;
+                    font-size: 12px;
+                    margin-right: 2px;
+                    color: #353535;
+                }
+
+                input:focus {
+                    outline: none;
+                }
+
+                input:focus::placeholder {
+                    opacity: 0;
+                }
+
+                button.search_btn {
+                    width: 72px !important;
+                    font-size: 12px !important;
+                    color: #353535;
+                    vertical-align: top;
                 }
             }
         }
