--- a/src/main/resources/templates/board/review/review.html
+++ b/src/main/resources/templates/board/review/review.html
@@ -13,15 +13,15 @@
         <div th:replace="/layouts/defaultLayout.html :: nav"></div>
 
         <!-- review section -->
-        <section id="reviews">
-            <div class="container-fluid reviews">
+        <section id="review">
+            <div class="container-fluid board">
                 <div class="section_header">
                     <h2>REVIEW</h2>
                     <div class="divider"></div>
                 </div>
-                <div class="reviews_body mt-5">
+                <div class="review_body mt-5">
                     <div class="table_wrap">
-                        <table>
+                        <table class="row_header_table">
                             <thead>
                             <tr>
                                 <th style="width: 50px;" scope="col">번호</th>
@@ -49,7 +49,7 @@
                                     </a>
                                 </td>
                                 <td class="left title">
-                                    <a th:href="${'/review/' + review.reviewId}">
+                                    <a th:href="${'/board/review/' + review.reviewId}">
                                         <span th:text="${review.title}"></span>
                                     </a>
                                 </td>
@@ -87,7 +87,7 @@
                         <button class="white_btn_w65_h30 write_btn">글쓰기</button>
                     </div>
 
-                    <div class="pagination mt-3"
+                    <div class="pagination"
                          th:with="start=${(reviews.number/maxPage)*maxPage + 1}, end=(${(reviews.totalPages == 0) ? 1 :
                                      (start + (maxPage - 1) < reviews.totalPages ? start + (maxPage - 1) : reviews.totalPages)})">
                         <ul>
@@ -122,14 +122,19 @@
                     </div>
 
                     <div class="search_box" th:object="${reviewSearchDto}">
-                        <select class="search_date_type" th:field="*{searchDateType}">
-                            <option value="">(전체)</option>
-                            <option value="title">제목</option>
-                            <option value="content">내용</option>
-                            <option value="name">작성자</option>
-                        </select>
-                        <input class="search_query" th:field="*{searchQuery}" type="text" placeholder="검색어를 입력해주세요">
-                        <button class="search_btn black_btn_w90_h40" type="button">검색</button>
+                        <fieldset class="board_search">
+                            <legend>게시물 검색</legend>
+                            <p>
+                                <select class="search_date_type" th:field="*{searchDateType}">
+                                    <option value="">(전체)</option>
+                                    <option value="title">제목</option>
+                                    <option value="content">내용</option>
+                                    <option value="name">작성자</option>
+                                </select>
+                                <input class="search_query" th:field="*{searchQuery}" type="text" placeholder="검색어를 입력해주세요">
+                                <button class="search_btn white_btn_w90_h30" type="button">검색</button>
+                            </p>
+                        </fieldset>
                     </div>
                 </div>
             </div>
@@ -155,7 +160,7 @@
 
         /* 글쓰기 버튼 */
         $(".write_btn").on("click", function () {
-            location.href = "/review/enroll";
+            location.href = "/board/review/enroll";
         });
 
         /* 평점 값 설정 */
@@ -174,7 +179,7 @@
     function page(page) {
         let searchDateType = $(".search_date_type").val();
         let searchQuery = $(".search_query").val();
-        location.href = "/review?page=" + page + "&searchDateType=" + searchDateType + "&searchQuery=" + searchQuery;
+        location.href = "/board/review?page=" + page + "&searchDateType=" + searchDateType + "&searchQuery=" + searchQuery;
     }
 </script>
 </body>
